[gd_scene load_steps=11 format=3 uid="uid://b30tid116mumg"]

[ext_resource type="Texture2D" uid="uid://bp5ixf64gyd5d" path="res://assets/art/bubble/bolla-1.png" id="1_guym5"]
[ext_resource type="Script" path="res://scripts/bubble_mine.gd" id="1_utv31"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmqul"]
radius = 55.0091

[sub_resource type="Animation" id="Animation_0w3y4"]
resource_name = "spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MineControl/Mine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.24, 0.24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lflco"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MineControl/Mine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MineControl/Mine:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MineControl/Mine:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h4vg8"]
resource_name = "charging"
length = 6.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MineControl/Mine:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MineControl/Mine:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2.4, 3.8, 5, 6.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.24, 0.24), Vector2(0.25, 0.25), Vector2(0.24, 0.24), Vector2(0.23, 0.23), Vector2(0.234107, 0.234107), Vector2(0.28, 0.28)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MineControl/Mine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 5, 5.2, 5.4, 5.6, 5.8, 6, 6.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.999997, 0.260012, 0.20084, 1), Color(1, 1, 1, 1), Color(0.999997, 0.260012, 0.20084, 1), Color(1, 1, 1, 1), Color(0.999997, 0.260012, 0.20084, 1), Color(1, 1, 1, 1), Color(0.999997, 0.260012, 0.20084, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6haea"]
_data = {
"RESET": SubResource("Animation_lflco"),
"charging": SubResource("Animation_h4vg8"),
"spawn": SubResource("Animation_0w3y4")
}

[sub_resource type="Animation" id="Animation_smfhr"]
resource_name = "hit"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MineControl:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.09, 0.14, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_pi51u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MineControl:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3osym"]
_data = {
"RESET": SubResource("Animation_pi51u"),
"hit": SubResource("Animation_smfhr")
}

[node name="BubbleMine" type="StaticBody2D"]
z_index = 1
script = ExtResource("1_utv31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_kmqul")

[node name="MineControl" type="Node2D" parent="."]

[node name="Mine" type="Sprite2D" parent="MineControl"]
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_guym5")

[node name="MineAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6haea")
}

[node name="ControlAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3osym")
}

[connection signal="animation_finished" from="MineAnimationPlayer" to="." method="_on_animation_player_animation_finished"]
